我们将修复巨量问题 1.由于删除文件导致彩蛋启动异常 2.去除时间显示的信息提示 3.新增关闭密码 4.创建大文件(彩蛋):新增文件夹隐藏 5.在独立线程中清理彩蛋 6.帮助页更新